2013-06-10  Raymond Penners  <raymond.penners@intenct.nl>

	* Connecting a social account is now a flow that needs to be
	explicitly triggered, by means of a `process="connect"` parameter
	that can be passed along to the `{% provider_login_url %}`, or a
	`process=connect` GET parameter.

2013-06-04  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.11.1 released (due to issue in disconnecting social
	accounts).

2013-06-02  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.11.0 released.

2013-05-30  Raymond Penners  <raymond.penners@intenct.nl>

	* Moved logic whether or not a social account can be disconnected
	to the `SocialAccountAdapter` (`validate_disconnect`).

	* Added `social_account_removed` signal.

2013-05-29  Raymond Penners  <raymond.penners@intenct.nl>

	* Implemented CSRF protection
	(http://tools.ietf.org/html/draft-ietf-oauth-v2-30#section-10.12).

	* The `user_logged_in` signal now optionally receives a
	`sociallogin` parameter, in case of a social login.

	* Added `social_account_added` (contributed by orblivion, thanks).

	* Hatem Nassrat contributed Bitly support, thanks!

2013-05-22  Raymond Penners  <raymond.penners@intenct.nl>

	* Bojan Mihelac contributed a Croatian translation, thanks!

2013-05-20  Raymond Penners  <raymond.penners@intenct.nl>

	* Messages (as in `django.contrib.messages`) are now configurable
	through templates.

2013-04-25  Raymond Penners  <raymond.penners@intenct.nl>

	* Added support for differentiating e-mail handling (verification,
	required) between local and social accounts:
	`SOCIALACCOUNT_EMAIL_REQUIRED` and
	`SOCIALACCOUNT_EMAIL_VERIFICATION`.

2013-04-16  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.10.1 released.

	* Cleaning of `username` can now be overriden via
	`DefaultAccountAdapter.clean_username`

2013-04-16  Raymond Penners  <raymond.penners@intenct.nl>

	* Fixed potential error (`assert`) when connecting social
	accounts.
