@@ -8,7 +8,9 @@ from django.utils.html import mark_safe
 
 from allauth.utils import import_callable
 from allauth.socialaccount import providers
-from allauth.socialaccount.providers.base import ProviderAccount
+from allauth.socialaccount.providers.base import (ProviderAccount,
+                                                  AuthProcess,
+                                                  AuthAction)
 from allauth.socialaccount.providers.oauth2.provider import OAuth2Provider
 from allauth.socialaccount.app_settings import QUERY_EMAIL
 from allauth.socialaccount.models import SocialApp
@@ -46,8 +48,10 @@ class FacebookProvider(OAuth2Provider):
         method = kwargs.get('method', self.get_method())
         if method == 'js_sdk':
             next = "'%s'" % (kwargs.get('next') or '')
-            process = "'%s'" % (kwargs.get('process') or 'login')
-            ret = "javascript:allauth.facebook.login(%s, %s)" % (next, process)
+            process = "'%s'" % (kwargs.get('process') or AuthProcess.LOGIN)
+            action = "'%s'" % (kwargs.get('action') or AuthAction.AUTHENTICATE)
+            ret = "javascript:allauth.facebook.login(%s, %s, %s)" \
+                % (next, action, process)
         else:
             assert method == 'oauth2'
             ret = super(FacebookProvider, self).get_login_url(request,
@@ -74,8 +78,15 @@ class FacebookProvider(OAuth2Provider):
             scope.append('email')
         return scope
 
-    def get_fb_login_options(self):
-        ret = self.get_auth_params()
+    def get_auth_params(self, request, action):
+        ret = super(FacebookProvider, self).get_auth_params(request,
+                                                            action)
+        if action == 'reauthenticate':
+            ret['auth_type'] = 'reauthenticate'
+        return ret
+
+    def get_fb_login_options(self, request):
+        ret = self.get_auth_params(request, 'authenticate')
         ret['scope'] = ','.join(self.get_scope())
         return ret
 
@@ -87,7 +98,7 @@ class FacebookProvider(OAuth2Provider):
             raise ImproperlyConfigured("No Facebook app configured: please"
                                        " add a SocialApp using the Django"
                                        " admin")
-        fb_login_options = self.get_fb_login_options()
+        fb_login_options = self.get_fb_login_options(request)
         ctx =  {'facebook_app': app,
                 'facebook_channel_url':
                 request.build_absolute_uri(reverse('facebook_channel')),
