@@ -1,9 +1,11 @@
 from allauth.socialaccount import providers
-from allauth.socialaccount.providers.base import ProviderAccount
+from allauth.socialaccount.providers.base import (ProviderAccount,
+                                                  AuthAction)
 from allauth.socialaccount.providers.oauth2.provider import OAuth2Provider
 from allauth.socialaccount.app_settings import QUERY_EMAIL
 
-class Scope:
+
+class Scope(object):
     USERINFO_PROFILE = 'https://www.googleapis.com/auth/userinfo.profile'
     USERINFO_EMAIL = 'https://www.googleapis.com/auth/userinfo.email'
 
@@ -31,5 +33,12 @@ class GoogleProvider(OAuth2Provider):
         if QUERY_EMAIL:
             scope.append(Scope.USERINFO_EMAIL)
         return scope
+
+    def get_auth_params(self, request, action):
+        ret = super(GoogleProvider, self).get_auth_params(request,
+                                                          action)
+        if action == AuthAction.REAUTHENTICATE:
+            ret['approval_prompt'] = 'force'
+        return ret
 
 providers.registry.register(GoogleProvider)
