@@ -13,22 +13,18 @@ class OAuth2Error(Exception):
 class OAuth2Client(object):
 
     def __init__(self, request, consumer_key, consumer_secret,
-                 authorization_url,
                  access_token_url,
                  callback_url,
-                 scope,
-                 extra_params):
+                 scope):
         self.request = request
-        self.authorization_url = authorization_url
         self.access_token_url = access_token_url
         self.callback_url = callback_url
         self.consumer_key = consumer_key
         self.consumer_secret = consumer_secret
         self.scope = ' '.join(scope)
         self.state = None
-        self.extra_params = extra_params
 
-    def get_redirect_url(self):
+    def get_redirect_url(self, authorization_url, extra_params):
         params = {
             'client_id': self.consumer_key,
             'redirect_uri': self.callback_url,
@@ -37,8 +33,8 @@ class OAuth2Client(object):
         }
         if self.state:
             params['state'] = self.state
-        params.update(self.extra_params)
-        return '%s?%s' % (self.authorization_url, urlencode(params))
+        params.update(extra_params)
+        return '%s?%s' % (authorization_url, urlencode(params))
 
     def get_access_token(self, code):
         params = {'client_id': self.consumer_key,
